--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">  
   <head>    
-    <title>My pets</title>    
+    <title>Peek a Boo</title>    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable-no, initial-scale=1, maximun-scale=1, minimum-scale=1">
       <link rel="stylesheet" href="css/fontello.css">
@@ -36,7 +36,7 @@
      
      <section id="bienvenidos">
         <h2>BIENVENIDOS A NUESTRO SITIO</h2>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt eius impedit quis deserunt labore perferendis explicabo dolores expedita, porro distinctio dolorum excepturi veritatis! Necessitatibus a sint expedita suscipit vitae distinctio.</p>
+         <p>Descubre Peek a Boo y convierte el aprendizaje de inglés y aprestamiento para niños en algo divertido.</p>
      </section>
      
      <section id="blog">
@@ -48,11 +48,11 @@
             </article>
             <article>
                 <img src="img/ingles.jpg">
-                <h4>English Class</h4>
+                <h4>English Lessons</h4>
             </article>
             <article>
                 <img src="img/chef.jpg">
-                <h4>Minichef</h4>
+                <h4>Mini chef</h4>
             </article>
          </div>
      </section>
@@ -83,7 +83,7 @@
  </main>
  <footer>
      <div class="contenedor">
-         <p class="copy">Peek a Boo &copy; 2019</p>
+         <p class="copy">Desarrollado con <label class="icon-heart" ></label>por Jhonson Rodriguez</p>
          <div class="sociales">
              <a class="icon-facebook-squared" href="#"></a>
              <a class=" icon-instagram" href="#"></a>
