--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <a href="">Inicio</a>
               <a href="">Servicios</a>
               <a href="">Blog</a>
-              <a href="">Contacto</a>
+              <a href="contacto.html">Contacto</a>
           </nav>                 
       </div>      
 </header>
@@ -83,6 +83,10 @@
  </main>
  <footer>
      <div class="contenedor">
+        <label id="iconos" class="icon-phone-circled" ></label>
+        <p class="copy">987687508</p> <br>
+        <label  id="iconos" class="icon-location" ></label>
+        <p class="copy">Calle viviaño Paredes 1157 Zona "D"</p><br>
          <p class="copy">Desarrollado con <label class="icon-heart" ></label> por Jhonson Rodriguez</p>
          <div class="sociales">
              <a class="icon-facebook-squared" href="#"></a>
