--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <input type="checkbox" id="menu-bar">
           <label class="icon-menu" for="menu-bar"></label>
           <nav class="menu">
-              <a href="">Inicio</a>
+              <a href="intro.html">Ejercicios</a>
               <a href="">Servicios</a>
               <a href="">Blog</a>
               <a href="contacto.html">Contacto</a>
