--- a/quiz/1.html
+++ b/quiz/1.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Peek a Boo</title>
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, user-scalable-no, initial-scale=1, maximun-scale=1, minimum-scale=1">
 	<link rel="stylesheet" href="../css/estilosEjercicios.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../script/ejer1.js" type="text/javascript"></script>
